--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,17 @@
-name: Node.js build and Lambda Deployment
+name: Lambda Deployment
 
 on:
   push:
     branches: [master]
 
 jobs:
-  build:
-    name: Build Node.js Project
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: Use Node.js 20.5.1
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20.5.1'
-
-      - name: Install dependencies
-        run: npm install
-
   deploy-to-lambda:
     name: Deploy to AWS Lambda
     runs-on: ubuntu-latest
-    needs: build
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
 
       - name: Set up Python (AWS CLI dependency)
         uses: actions/setup-python@v2
@@ -39,8 +21,8 @@ jobs:
       - name: Install AWS CLI
         run: pip install awscli
 
-      - name: Generate Deployment Package
-        run: zip -r function.zip .
+      - name: Package Lambda function
+        run: zip -r function.zip index.js
 
       - name: Deploy to AWS Lambda
         run: |
@@ -48,5 +30,4 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
